--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/CalendarPage/_HoverEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/CalendarPage/_HoverEvent.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="eventHoverContainer">
+﻿<div id="eventHoverContainer" style="display:none;">
 	<div style="height:100%;background:rgba(0, 0, 0,.5);padding:20px;">
 		<div>
 			<span>co: </span><span class="event-hover-name"></span>
