--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventBlock.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventBlock.cshtml
@@ -12,7 +12,7 @@
       </div>
       <div class="details-event-block-info-address">
         <div data-bind="text: address.street, visible: ( address.street != '' && address.street != null )"></div>
-        <span data-bind="text: address.zipCode, visible: ( address.city != '' && address.city != null )"></span><span data-bind=" text ' ' + address.city, visible ( address.city !='' && address.city !=null )"></span>
+        <span data-bind="text: address.zipCode, visible: ( address.city != '' && address.city != null )"></span><span data-bind="text: ' ' + address.city, visible ( address.city !='' && address.city !=null )"></span>
       </div>
       <div class="details-event-block-info-body">
         <div style="position:relative;left:-25px;">
