--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -3,12 +3,12 @@
 	@Html.Partial( "_NavPart" )
 
 </section>
-<section class="dz-row dashboard-part" style="background: rgb(236, 236, 236); border-top: 1px solid #e2e2e2;">
+<section class="dz-row dashboard-part">
 
 	@Html.Partial( "_DashboardPart" )
 
 </section>
-<section class="dz-row upcoming-events-part" style="overflow: hidden;">
+<section class="dz-row upcoming-events-part">
 	<header class="section-title">Nadchodzące wydarzenia</header>
 
 	@Html.Partial( "_UpcomingEventsPart" )
