--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 	</section>
 
 	<section id="calendar" class="dz-column">
-			<div id="calendarWidget" class="dz-row" style="margin-bottom:0px;padding-top:10px;top:0;">
+			<div id="calendarWidget" class="dz-row" style="margin-bottom:0px;top:0;">
 
 				<!-- Calendar is added dynamically (calendarWidget.js)   -->
 
